# devfest-student-assistant

./: PROJECT_CONTEXT.md  Untitled  package.json  tsconfig.json
crazy-reverse-fwd/: COMBINE-SPEC.md  SPEC-git.md  page.tsx  types.ts
crazy-reverse-fwd/api/branches/: route.ts
crazy-reverse-fwd/api/commit/: route.ts
crazy-reverse-fwd/api/create-branch/: route.ts
crazy-reverse-fwd/api/create-pr/: route.ts
crazy-reverse-fwd/lib/: claude-sdk.ts  pipeline.ts  queue.ts  spec-task.ts  templates.ts
first-ever-crazy-fwds/: CommentOverlay.tsx  CommentOverlayProvider.tsx  SPEC-comment-overlay.md  page.tsx
reverse-forward-overlay/: COMBINE-LEVEL-2-SPEC.md  page.tsx  types.ts
reverse-forward-overlay/api/commit/: route.ts
reverse-forward-overlay/api/import-overlay/: route.ts
reverse-forward-overlay/api/modules/: route.ts
reverse-forward-overlay/api/push/: route.ts
reverse-forward-overlay/api/queue/: route.ts
reverse-forward-overlay/api/save-manifest/: route.ts
reverse-forward-overlay/lib/: claude-sdk.ts  manifest.ts  pipeline.ts  queue.ts  spec-task.ts  templates.ts
script/spec-gen-kit/output/: all-list-extract-spec-prompt.md  assignment-card-extract-spec-prompt.md  implement-prompt.md  manifest.json  queue.json
src/app/: layout.tsx
src/app/components/: AddSourceButton.tsx  (+10 more)
src/app/prototypes/testin-canvas/server/: canvas_cache.json  pyproject.toml  server.py
src/app/prototypes/testin-events/server/: events.json  pyproject.toml  server.py
src/app/prototypes/testin-ext-sources/server/: LINKS.json  findings_cache.json  pyproject.toml  server.py
(+187 files in other folders)
